--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.121.2",
     "pandas>=2.3.3",
-    "scikit-learn>=1.7.2",
+    "scikit-learn==1.7.0",
+    "seaborn>=0.13.2",
+    "uvicorn>=0.38.0",
+    "xgboost>=3.1.1",
+]
+
+[dependency-groups]
+dev = [
+    "requests>=2.32.5",
+    "seaborn>=0.13.2",
 ]
