--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "jupyter>=1.1.1",
+    "notebook>=7.4.7",
     "requests>=2.32.5",
     "seaborn>=0.13.2",
 ]
